Implemented the Ember client.

--- a/demo/demo-web/src/scss/_forms.scss
+++ b/demo/demo-web/src/scss/_forms.scss
@@ -1,1 +1,73 @@
 @import "constants";
+
+legend {
+	font-size: 14px;;
+}
+
+.f-actions {
+	margin-top: 15px;
+}
+
+.f-floating-label-form-group {
+	border-bottom: 1px solid $borderColor;
+	margin-bottom: 0;
+	padding-bottom: 4px;
+
+	& > input {
+		background: none;
+		border: none;
+		border-radius: 0;
+		box-shadow: none !important;
+		height: 24px;
+		margin-top: 0;
+		padding-left: 0;
+		padding-right: 0;
+		position: relative;
+		z-index: 1;
+	}
+
+	& > textarea {
+		background: none;
+		border: none;
+		border-radius: 0;
+		box-shadow: none !important;
+		height: 200px;
+		margin-top: 0;
+		padding-left: 0;
+		padding-right: 0;
+		position: relative;
+		z-index: 1;
+	}
+
+	& > select {
+		-webkit-appearance: none;
+		-moz-appearance: none;
+		appearance: none;
+		background: transparent;
+		border: none;
+		border-radius: 0;
+		box-shadow: 0;
+		color: #555;
+		cursor: pointer;
+		display: inline-block;
+		margin: 0;
+		outline: none;
+		padding: 3px 0 3px 0;
+	}
+
+	& > label {
+		font-size: 11px;
+		padding-top: 7px;
+		margin: 0;
+		z-index: 0;
+
+		&.floatingLabel-focus {
+			color: $brand-success;
+		}
+	}
+
+	&:not(:first-child) {
+		border-left: 1px solid $borderColor;
+		padding-left: 10px;
+	}
+}
