--- a/demo/demo-web/src/scss/_general.scss
+++ b/demo/demo-web/src/scss/_general.scss
@@ -1,1 +1,57 @@
 @import "constants";
+
+a {
+	color: $backgroundColorDark;
+}
+
+body {
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h3 {
+	font-size: 16px;
+	margin-top: 0;
+	margin-bottom: 8px;
+}
+
+.g-segmented-control {
+	border: 1px solid #fff;
+	border-radius: 5px;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+
+	& > li {
+		border-right: 1px solid #fff;
+		float: left;
+		margin: 0;
+		padding: 0;
+
+		& > a {
+			color: #fff;
+			display: inline-block;
+			min-width: 60px;
+			padding: 4px 8px;
+			text-decoration: none;
+			text-align: center;
+
+			&.active {
+				background-color: white;
+				color: $backgroundColorDark;
+			}
+		}
+
+		&:hover {
+			background-color: rgba(255, 255, 255, 0.8);
+
+			& > a {
+				color: $backgroundColorDark;
+			}
+		}
+
+		&:last-child {
+			border-right: 0;
+		}
+	}
+}
+
