--- a/demo/demo-web/src/templates/appointments/edit.hbs
+++ b/demo/demo-web/src/templates/appointments/edit.hbs
@@ -3,10 +3,15 @@
 
 	<div class="l-horizontal">
 		<div class="form-group f-floating-label-form-group">
-			{{input value=startTime class="form-control" placeholder="Start"}}
+			{{input value=date class="form-control" placeholder="Datum"}}
+		</div>
+	</div>
+	<div class="l-horizontal">
+		<div class="form-group f-floating-label-form-group">
+			{{input value=start class="form-control" placeholder="Starttid"}}
 		</div>
 		<div class="form-group f-floating-label-form-group">
-			{{input value=endTime class="form-control" placeholder="Slut"}}
+			{{input value=end class="form-control" placeholder="Sluttid"}}
 		</div>
 	</div>
 	<div class="l-horizontal">
