--- a/demo/demo-server/src/main/resources/templates/notes/create.html
+++ b/demo/demo-server/src/main/resources/templates/notes/create.html
@@ -3,7 +3,7 @@
 <head>
 
 	<meta charset="utf-8"/>
-	<title>Callista Care</title>
+	<title>Callista Care 1.0</title>
 
 	<link rel="stylesheet" href="/css/style.css"/>
 
@@ -32,6 +32,9 @@
 			<h3>Ny journalanteckning</h3>
 		</nav>
 	</div>
+
+	<script src="/js/libs.js"></script>
+	<script src="/js/app.js"></script>
 
 </body>
 </html>
