--- a/demo/demo-server/src/main/resources/templates/appointments/index.html
+++ b/demo/demo-server/src/main/resources/templates/appointments/index.html
@@ -3,7 +3,7 @@
 <head>
 
 	<meta charset="utf-8"/>
-	<title>Callista Care</title>
+	<title>Callista Care 1.0</title>
 
 	<link rel="stylesheet" href="/css/style.css"/>
 
@@ -50,6 +50,9 @@
 			<a href="/appointments/1/edit">Edit</a>
 		</section>
 	</div>
+
+	<script src="/js/libs.js"></script>
+	<script src="/js/app.js"></script>
 
 </body>
 </html>
