--- a/demo/demo-server/src/main/resources/templates/notes/index.html
+++ b/demo/demo-server/src/main/resources/templates/notes/index.html
@@ -3,31 +3,109 @@
 <head>
 
 	<meta charset="utf-8"/>
-	<title>Callista Care</title>
+	<title>Callista Care 1.0</title>
 
-	<link rel="stylesheet" href="/css/style.css"/>
+	<link rel="stylesheet" th:href="@{/css/style.css}"/>
 
 </head>
 <body>
+	<div class="l-main">
 
-	<div th:include="layout :: head"></div>
+		<div th:include="layout :: head"></div>
 
-	<header class="l-mainHeader">
-		<h2>Journal</h2>
-		<ul class="pull-right g-segmented-control">
-			<li>
-				<a href="/patients/1/notes/create">
-					<i class="fa fa-plus"></i> Ny
-				</a>
-			</li>
-		</ul>
-	</header>
+		<header class="l-mainHeader">
+			<button th:attr="onclick=|document.location='@{/patients}'|" class="btn" type="button"
+					style="margin: -3px 10px 0 0;">
+				<i class="fa fa-chevron-left"></i> Stäng
+			</button>
 
-	<div class="l-workspace">
-		<section class="l-mainContent">
-			<a href="/patients/1/notes/1/edit">Edit</a>
-		</section>
+			<h2 th:text="|${patient.firstName} ${patient.lastName} (${patient.civicRegNr})|"></h2>
+			<ul class="pull-right g-segmented-control">
+				<li>
+					<a th:href="@{notes/create}">
+						<i class="fa fa-plus"></i> Ny
+					</a>
+				</li>
+			</ul>
+			<ul class="pull-right g-segmented-control" style="margin-right: 10px;">
+				<li>
+					<a th:href="@{edit}">
+						<i class="fa fa-user"></i> Patientuppgifter
+					</a>
+				</li>
+			</ul>
+		</header>
+
+		<div class="l-workspace">
+
+			<nav class="l-sideMenu l-visible">
+				<h3>Sök</h3>
+
+				<form method="GET" th:action="@{notes}" th:object="${filter}">
+
+					<div class="l-horizontal">
+						<div class="form-group f-floating-label-form-group">
+							<input type="text" class="form-control" placeholder="Från datum" th:field="*{startDate}"/>
+						</div>
+					</div>
+					<div class="l-horizontal">
+						<div class="form-group f-floating-label-form-group">
+							<input type="text" class="form-control" placeholder="Till datum" th:field="*{endDate}"/>
+						</div>
+					</div>
+					<div class="l-horizontal">
+						<div class="form-group f-floating-label-form-group">
+							<input type="text" class="form-control" placeholder="Läkare" th:field="*{doctor}"/>
+						</div>
+					</div>
+					<div class="l-horizontal">
+						<div class="form-group f-floating-label-form-group">
+							<input type="text" class="form-control" placeholder="Fritext" th:field="*{text}"/>
+						</div>
+					</div>
+
+					<div class="f-actions">
+						<button class="btn btn-success" type="submit"><i class="fa fa-check"></i> Sök</button>
+					</div>
+
+				</form>
+			</nav>
+
+			<section class="l-mainContent">
+				<table class="table table-hover">
+					<colgroup>
+						<col style="width: 100px"/>
+						<col style="width: 100px"/>
+						<col style="width: 100%"/>
+						<col style="width: 150px"/>
+					</colgroup>
+					<thead>
+					<tr>
+						<th>Datum</th>
+						<th>Typ</th>
+						<th>Information</th>
+						<th>Läkare</th>
+					</tr>
+					</thead>
+					<tbody>
+					<tr th:each="note,status : ${notes}"
+							th:attr="onclick=|document.location='notes/${note.id}/edit'|">
+						<td th:text="${#dates.format(note.createdTime, 'yyyy-MM-dd')}"></td>
+						<td th:text="${note.type}"></td>
+						<td th:text="${note.text}"></td>
+						<td th:text="${note.doctor}"></td>
+					</tr>
+					<tr class="t-empty" th:if="${#lists.isEmpty(patient.notes)}">
+						<td colspan="3">Inga journalanteckningar hittades</td>
+					</tr>
+					</tbody>
+				</table>
+			</section>
+		</div>
 	</div>
+
+	<script th:src="@{/js/libs.js}"></script>
+	<script th:src="@{/js/app.js}"></script>
 
 </body>
 </html>
