--- a/demo/demo-server/src/main/resources/templates/patients/create.html
+++ b/demo/demo-server/src/main/resources/templates/patients/create.html
@@ -3,35 +3,108 @@
 <head>
 
 	<meta charset="utf-8"/>
-	<title>Callista Care</title>
+	<title>Callista Care 1.0</title>
 
-	<link rel="stylesheet" href="/css/style.css"/>
+	<link rel="stylesheet" th:href="@{/css/style.css}"/>
 
 </head>
 <body>
+	<div class="l-main">
 
-	<div th:include="layout :: head"></div>
+		<div th:include="layout :: head"></div>
 
-	<header class="l-mainHeader">
-		<h2>Patienter</h2>
-		<ul class="pull-right g-segmented-control">
-			<li>
-				<a href="/patients/create">
-					<i class="fa fa-plus"></i> Ny
-				</a>
-			</li>
-		</ul>
-	</header>
+		<header class="l-mainHeader">
+			<h2>Patienter</h2>
+			<ul class="pull-right g-segmented-control">
+				<li>
+					<a th:href="@{/patients/create}" class="active">
+						<i class="fa fa-plus"></i> Ny
+					</a>
+				</li>
+			</ul>
+		</header>
 
-	<div class="l-workspace">
-		<section class="l-mainContent">
-			<a href="/patients/1/edit">Edit</a>
-		</section>
+		<div class="l-workspace">
 
-		<nav class="l-sideForm l-visible">
-			<h3>Ny patient</h3>
-		</nav>
+			<section class="l-mainContent">
+				<table class="table table-hover">
+					<colgroup>
+						<col style="width: 130px"/>
+						<col style="width: 160px"/>
+						<col style="width: 100%"/>
+					</colgroup>
+					<thead>
+					<tr>
+						<th>Personnummer</th>
+						<th>Namn</th>
+						<th>Ort</th>
+					</tr>
+					</thead>
+					<tbody>
+					<tr th:each="patient,status : ${patients}"
+							th:attr="onclick=|document.location='@{/patients/${patient.id}/notes}'|">
+						<td th:text="${patient.civicRegNr}"></td>
+						<td th:text="|${patient.firstName} ${patient.lastName}|"></td>
+						<td th:text="${patient.city}"></td>
+					</tr>
+					<tr class="t-empty" th:if="${#lists.isEmpty(patients)}">
+						<td colspan="3">Inga patienter hittades</td>
+					</tr>
+					</tbody>
+				</table>
+			</section>
+
+			<div class="l-sideForm l-visible">
+				<h3>Ny patient</h3>
+
+				<form method="POST" th:action="@{/patients/create}">
+
+					<div class="l-horizontal">
+						<div class="form-group f-floating-label-form-group">
+							<input name="civicRegNr" class="form-control" placeholder="Personnummer"/>
+						</div>
+					</div>
+					<div class="l-horizontal">
+						<div class="form-group f-floating-label-form-group">
+							<input name="firstName" class="form-control" placeholder="Förnamn"/>
+						</div>
+						<div class="form-group f-floating-label-form-group">
+							<input name="lastName" class="form-control" placeholder="Efternamn"/>
+						</div>
+					</div>
+					<div class="l-horizontal">
+						<div class="form-group f-floating-label-form-group">
+							<input name="streetAddress" class="form-control" placeholder="Gatuadress"/>
+						</div>
+					</div>
+					<div class="l-horizontal">
+						<div class="form-group f-floating-label-form-group">
+							<input name="zipCode" class="form-control" placeholder="Postnummer"/>
+						</div>
+						<div class="form-group f-floating-label-form-group">
+							<input name="city" class="form-control" placeholder="Postort"/>
+						</div>
+					</div>
+					<div class="l-horizontal">
+						<div class="form-group f-floating-label-form-group">
+							<input name="phone" class="form-control" placeholder="Telefon"/>
+						</div>
+						<div class="form-group f-floating-label-form-group">
+							<input name="mobile" class="form-control" placeholder="Mobil"/>
+						</div>
+					</div>
+
+					<div class="f-actions">
+						<button class="btn btn-success" type="submit"><i class="fa fa-check"></i> Spara</button>
+						<button th:attr="onclick=|document.location='@{/patients}'|" class="btn" type="button">Avbryt</button>
+					</div>
+				</form>
+			</div>
+		</div>
 	</div>
+
+	<script th:src="@{/js/libs.js}"></script>
+	<script th:src="@{/js/app.js}"></script>
 
 </body>
 </html>
