--- a/demo/demo-server/src/main/resources/templates/patients/index.html
+++ b/demo/demo-server/src/main/resources/templates/patients/index.html
@@ -3,31 +3,95 @@
 <head>
 
 	<meta charset="utf-8"/>
-	<title>Callista Care</title>
+	<title>Callista Care 1.0</title>
 
-	<link rel="stylesheet" href="/css/style.css"/>
+	<link rel="stylesheet" th:href="@{/css/style.css}"/>
 
 </head>
 <body>
+	<div class="l-main">
 
-	<div th:include="layout :: head"></div>
+		<div th:include="layout :: head"></div>
 
-	<header class="l-mainHeader">
-		<h2>Patienter</h2>
-		<ul class="pull-right g-segmented-control">
-			<li>
-				<a href="/patients/create">
-					<i class="fa fa-plus"></i> Ny
-				</a>
-			</li>
-		</ul>
-	</header>
+		<header class="l-mainHeader">
+			<h2>Patienter</h2>
+			<ul class="pull-right g-segmented-control">
+				<li>
+					<a th:href="@{/patients/create}">
+						<i class="fa fa-plus"></i> Ny
+					</a>
+				</li>
+			</ul>
+		</header>
 
-	<div class="l-workspace">
-		<section class="l-mainContent">
-			<a href="/patients/1/edit">Edit</a>
-		</section>
+		<div class="l-workspace">
+
+			<nav class="l-sideMenu l-visible">
+				<h3>Sök</h3>
+
+				<form method="GET" th:action="@{/patients}" th:object="${filter}">
+
+					<div class="l-horizontal">
+						<div class="form-group f-floating-label-form-group">
+							<input type="text" class="form-control" placeholder="Personnummer"
+									th:field="*{civicRegNr}"/>
+						</div>
+					</div>
+					<div class="l-horizontal">
+						<div class="form-group f-floating-label-form-group">
+							<input type="text" class="form-control" placeholder="Förnamn" th:field="*{firstName}"/>
+						</div>
+					</div>
+					<div class="l-horizontal">
+						<div class="form-group f-floating-label-form-group">
+							<input type="text" class="form-control" placeholder="Efternamn" th:field="*{lastName}"/>
+						</div>
+					</div>
+					<div class="l-horizontal">
+						<div class="form-group f-floating-label-form-group">
+							<input type="text" class="form-control" placeholder="Ort" th:field="*{city}"/>
+						</div>
+					</div>
+
+					<div class="f-actions">
+						<button class="btn btn-success" type="submit"><i class="fa fa-check"></i> Sök</button>
+					</div>
+
+				</form>
+			</nav>
+
+			<section class="l-mainContent">
+				<table class="table table-hover">
+					<colgroup>
+						<col style="width: 130px"/>
+						<col style="width: 160px"/>
+						<col style="width: 100%"/>
+					</colgroup>
+					<thead>
+					<tr>
+						<th>Personnummer</th>
+						<th>Namn</th>
+						<th>Ort</th>
+					</tr>
+					</thead>
+					<tbody>
+					<tr th:each="patient,status : ${patients}"
+							th:attr="onclick=|document.location='/patients/${patient.id}/notes'|">
+						<td th:text="${patient.civicRegNr}"></td>
+						<td th:text="|${patient.firstName} ${patient.lastName}|"></td>
+						<td th:text="${patient.city}"></td>
+					</tr>
+					<tr class="t-empty" th:if="${#lists.isEmpty(patients)}">
+						<td colspan="3">Inga patienter hittades</td>
+					</tr>
+					</tbody>
+				</table>
+			</section>
+		</div>
 	</div>
+
+	<script th:src="@{/js/libs.js}"></script>
+	<script th:src="@{/js/app.js}"></script>
 
 </body>
 </html>
