Improved the demo.

--- a/demo/demo-web/src/templates/application.hbs
+++ b/demo/demo-web/src/templates/application.hbs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
 	<div class="navbar-header">
 		{{#link-to "index" class="navbar-brand"}}
-			Callista Care
+			Callista Care 2.0
 		{{/link-to}}
 	</div>
 
