--- a/demo/demo-web/src/scss/_forms.scss
+++ b/demo/demo-web/src/scss/_forms.scss
@@ -71,3 +71,18 @@ legend {
 		padding-left: 10px;
 	}
 }
+
+.f-search {
+	border-top-left-radius: 0;
+	border-bottom-left-radius: 0;
+	float: left;
+	height: 33px;
+	width: auto;
+		/*background-color: rgba(255, 255, 255, 0.2);
+		color: #fff;
+		border: 0;
+		height: 33px;
+		-webkit-box-shadow: none;
+		-moz-box-shadow: none;
+		box-shadow: none;*/
+}
