Added the ability to save patients.

--- a/demo/demo-ios/CallistaCare/Base.lproj/Main.storyboard
+++ b/demo/demo-ios/CallistaCare/Base.lproj/Main.storyboard
@@ -271,7 +271,7 @@
                     <navigationItem key="navigationItem" title="Patienter" id="TlD-qh-L5Y">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="aym-oh-jFu">
                             <connections>
-                                <segue destination="fSK-bk-cqc" kind="modal" id="cFw-WO-37D"/>
+                                <segue destination="fSK-bk-cqc" kind="modal" identifier="AddPatientSegue" id="cFw-WO-37D"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -294,7 +294,7 @@
                         <sections>
                             <tableViewSection headerTitle="Allmänt" id="bpH-9T-shf">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="50" id="8yU-LK-stq">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="50" id="8yU-LK-stq">
                                         <rect key="frame" x="0.0" y="55" width="320" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8yU-LK-stq" id="28d-KT-GNg">
@@ -306,11 +306,14 @@
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
+                                                    <connections>
+                                                        <outlet property="delegate" destination="if3-jK-z0C" id="Ktw-KH-WOc"/>
+                                                    </connections>
                                                 </textField>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="50" id="CAC-rl-raq">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="50" id="CAC-rl-raq">
                                         <rect key="frame" x="0.0" y="105" width="320" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="CAC-rl-raq" id="Qha-q6-msv">
@@ -321,13 +324,19 @@
                                                     <rect key="frame" x="20" y="5" width="120" height="40"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                    <connections>
+                                                        <outlet property="delegate" destination="if3-jK-z0C" id="p3K-3y-Frk"/>
+                                                    </connections>
                                                 </textField>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Efternamn" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1w8-MW-er7" customClass="JVFloatLabeledTextField">
                                                     <rect key="frame" x="155" y="5" width="165" height="40"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                    <connections>
+                                                        <outlet property="delegate" destination="if3-jK-z0C" id="4Fv-9e-saS"/>
+                                                    </connections>
                                                 </textField>
                                                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vKY-A5-h1P">
                                                     <rect key="frame" x="140" y="0.0" width="1" height="50"/>
@@ -341,7 +350,7 @@
                             </tableViewSection>
                             <tableViewSection headerTitle="Adress" id="VGQ-Hd-WhN">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="50" id="1OV-3S-Jlw">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="50" id="1OV-3S-Jlw">
                                         <rect key="frame" x="0.0" y="203" width="320" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1OV-3S-Jlw" id="qhb-7P-H7d">
@@ -352,12 +361,15 @@
                                                     <rect key="frame" x="20" y="5" width="300" height="40"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                    <connections>
+                                                        <outlet property="delegate" destination="if3-jK-z0C" id="6Rc-XB-BXC"/>
+                                                    </connections>
                                                 </textField>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="50" id="jcI-bX-gcc">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="50" id="jcI-bX-gcc">
                                         <rect key="frame" x="0.0" y="253" width="320" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jcI-bX-gcc" id="3Dj-Je-NRM">
@@ -368,13 +380,19 @@
                                                     <rect key="frame" x="20" y="5" width="120" height="40"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
+                                                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                                    <connections>
+                                                        <outlet property="delegate" destination="if3-jK-z0C" id="icf-Ch-9V2"/>
+                                                    </connections>
                                                 </textField>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Postort" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vsh-Gz-55x" customClass="JVFloatLabeledTextField">
                                                     <rect key="frame" x="155" y="5" width="165" height="40"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                    <connections>
+                                                        <outlet property="delegate" destination="if3-jK-z0C" id="lCG-sA-A7g"/>
+                                                    </connections>
                                                 </textField>
                                                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kss-9r-1Al">
                                                     <rect key="frame" x="140" y="0.0" width="1" height="50"/>
@@ -388,7 +406,7 @@
                             </tableViewSection>
                             <tableViewSection headerTitle="Kontakt" id="1bB-cV-N8c">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="50" id="JD3-n4-29r">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="50" id="JD3-n4-29r">
                                         <rect key="frame" x="0.0" y="351" width="320" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JD3-n4-29r" id="GxZ-ke-9sK">
@@ -399,13 +417,19 @@
                                                     <rect key="frame" x="20" y="5" width="120" height="40"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
+                                                    <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
+                                                    <connections>
+                                                        <outlet property="delegate" destination="if3-jK-z0C" id="gck-xz-gUQ"/>
+                                                    </connections>
                                                 </textField>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Mobiltelefon" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yub-Ei-RBc" customClass="JVFloatLabeledTextField">
                                                     <rect key="frame" x="155" y="5" width="165" height="40"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
+                                                    <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
+                                                    <connections>
+                                                        <outlet property="delegate" destination="if3-jK-z0C" id="qyi-ZK-IOd"/>
+                                                    </connections>
                                                 </textField>
                                                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eMk-qP-8Nb">
                                                     <rect key="frame" x="140" y="0.0" width="1" height="50"/>
@@ -431,7 +455,7 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="nOe-Xd-sk3">
                             <connections>
-                                <segue destination="CDn-ic-yEi" kind="unwind" unwindAction="unwindToThisViewController:" id="h30-TH-OcS"/>
+                                <action selector="save:" destination="if3-jK-z0C" id="ukn-2D-BC1"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
