Updated the Spring Boot 1.0.0.RC1

--- a/demo/demo-server/src/main/resources/templates/patients/create.html
+++ b/demo/demo-server/src/main/resources/templates/patients/create.html
@@ -96,7 +96,8 @@
 
 					<div class="f-actions">
 						<button class="btn btn-success" type="submit"><i class="fa fa-check"></i> Spara</button>
-						<button th:attr="onclick=|document.location='@{/patients}'|" class="btn" type="button">Avbryt</button>
+						<button th:attr="onclick=|document.location='@{/patients}'|" class="btn" type="button">Avbryt
+						</button>
 					</div>
 				</form>
 			</div>
